    implementation and extended AbstractConverter then your code will not break.

Source compatible - Yes, except
  - PartialConverter interface, see above

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2006g

Semantic compatible - Yes, except
  - YearMonthDay constructor no longer accepts time only strings
  - TimeOfDay constructor no longer accepts strings including a date


Deprecations since 1.2
----------------------
- Instant.toDateTimeISO
- Instant.toMutableDateTimeISO
    These were identical to the methods without the ISO suffix


Bug fixes since 1.2
-------------------
- YearMonthDay
  Constructing with String value no longer accepts a time only string

- TimeOfDay
  Constructing with String value no longer accepts date fields
  Constructing with String now treats 'T' prefix as optional

- DateTime/DateMidnight/MutableDateTime/AbstractInstant
   Conversion methods toDateTime, toDateTimeISO, toMutableDateTime, and
    toMutableDateTimeISO now preserve the time zone.
    Previously calling any of these four methods would convert the result to
    the default time zone. This was incorrect.
    The methods have been changed to preserve the time zone.
   The similarly named methods on Instant have not changed behaviour.

- Interval/MutableInterval.overlaps(ReadableInterval)
  Previously, this method didn't handle empty intervals correctly
  Now, an empty interval at the start of a larger interval does overlap

- DateTimeFormatterBuilder.MatchingParser
  Previously didn't estimate parsed length correctly

- YearMonthDay/TimeOfDay/Partial.Property
  Hashcode was not defined

- FixedDateTimeZone
  Hashcode was not defined

- ISO/Gregorian/Julian/Coptic/EthiopicChronology
  Fixed overflow when getting year field from instants at Long.MAX_VALUE and
  LONG.MIN_VALUE

- DayOfYear field
  Better error messages


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team